--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile files('libs/nineoldandroids-2.4.0.jar')
-    //对话框
+    //对话框progress
     compile 'com.pnikosis:materialish-progress:1.0'
 }
